Optimize HQSixelEncoder for performance and thread safety (#87)
* Initial plan

* Optimize HQSixelEncoder for performance and thread safety

- Remove instance field pcaKey and use local variable in findNearestColor()
  to improve thread safety within Palette
- Mark paletteSize, fastAndDirty, customSixelPalette, and
  suppressEmitPalette as volatile for thread-safe reads across threads
- Optimize emitPalette() with chained StringBuilder appends and char
  literals instead of single-char strings
- Optimize sixel row encoding with chained appends
- Replace String.format() with StringBuilder for header generation
- Add comprehensive thread safety documentation to class Javadoc
- Add thread safety tests for concurrent encoding operations

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Address code review feedback

- Restore pcaKey instance field for performance (each Palette is
  created fresh per toSixel call, so no thread safety concern)
- Add documentation explaining sixel color format in emitPalette
- Improve test comments explaining color generation strategy

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Apply clean code principles to HQSixelEncoder

- Extract Rgb record from ImageUtils to standalone class with utility methods
- Refactor Bucket class: extract updateMinMaxBounds, findMaxRangeChannel,
  sortByChannel, splitIntoNewBucket, computeQuantizedAverage,
  computeWeightedAverage methods
- Refactor findNearestColor: extract computePcaCoordinates, findSearchCenter,
  computePcaDistance, searchInDirection methods with SearchState holder
- Use Rgb.getRed/getGreen/getBlue/combineRgb instead of inline bit operations
- Use Rgb.distanceSquared instead of manual distance calculations
- Add logVerbose helper method for conditional debug output
- Simplify toSixelColor by delegating to Rgb record methods

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Continue clean code refactoring of HQSix